--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet"> 
         <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css"> -->
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="swiper.min.css">
         <link rel="stylesheet" type="text/css" href="./style.css">
+       
     </head>
 
     <body>
@@ -23,7 +25,6 @@
             <div class="container">
                 <h2>genre</h2>
                 <div>
-                   carousel 
                 </div>
             </div>
         </div>
@@ -38,8 +39,8 @@
                             <h2>mood</h2>
                         </div>
                         
-                        <div class="moon_container moon1"><img class="moon moon1" src="https://stickershop.line-scdn.net/stickershop/v1/product/1021174/LINEStorePC/main.png;compress=true"></div>
-                        <div class="moon_container moon2"><img class="moon moon2" src="https://stickershop.line-scdn.net/stickershop/v1/product/1021174/LINEStorePC/main.png;compress=true"></div>
+                        <div class="moon_container joy"><img class="moon moon1" src="./icons/mood/joy.svg"></div>
+                        <div class="moon_container moon2"><img class="moon moon2" src="./icons/mood/sadness.svg"></div>
                         <div class="moon_container moon3"><img class="moon moon3" src="https://stickershop.line-scdn.net/stickershop/v1/product/1021174/LINEStorePC/main.png;compress=true"></div>
                         <div class="moon_container moon4"><img class="moon moon4" src="https://stickershop.line-scdn.net/stickershop/v1/product/1021174/LINEStorePC/main.png;compress=true"></div>
                         <div class="moon_container moon5"><img class="moon moon5" src="https://stickershop.line-scdn.net/stickershop/v1/product/1021174/LINEStorePC/main.png;compress=true"></div>
@@ -81,5 +82,24 @@
         </div>
 
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
+        <script>
+            var swiper = new Swiper('.swiper-container', {
+                effect: 'coverflow',
+                grabCursor: true,
+                centeredSlides: true,
+                slidesPerView: 'auto',
+                coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                slideShadows : true,
+                },
+                pagination: {
+                el: '.swiper-pagination',
+                },
+            });
+        </script>
     </body>
 </html>
