removed home logo and container outline

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="vertical-center home">
             <div class="container">
-                <img src="./radio-waves.svg">
+                <!-- <img src="./radio-waves.svg"> -->
                 <h1>TODAY'S ANTHEM</h1>
             </div>
         </div>
