--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
         <div class="vertical-center energy">
             <div class="container">
                 <h2>energy</h2>
-                <div>
-                </div>
+                
+                1<input style="margin-top: 5%; width: 40%"  type="range" name="energy" min="1" max="10">10
+
             </div>
         </div>
 
